--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.config.import=file:env.properties
 spring.application.name=supermarktitvitae
+spring.datasource.url=jdbc:postgresql://localhost:5432/${pg_local_database_name}
+spring.datasource.username=${pg_local_username}
+spring.datasource.password=${pg_local_password}
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
