--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,5 +3,7 @@ spring.application.name=supermarktitvitae
 spring.datasource.url=jdbc:postgresql://localhost:5432/${pg_local_database_name}
 spring.datasource.username=${pg_local_username}
 spring.datasource.password=${pg_local_password}
+supermarktitvitae.jwt-expiration-ms=3600000
+supermarktitvitae.cors=http://localhost:5173
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
